<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="lesson_16"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="528dp"
        android:onClick="gohomework14"
        android:text="go homework 14"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:onClick="add"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPrevision"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="previous"
        android:text="@string/previous"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/buttonAdd"
        app:layout_constraintTop_toTopOf="@+id/buttonAdd" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="next1"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/buttonPrevision"
        app:layout_constraintTop_toTopOf="@+id/buttonPrevision" />

    <TextView
        android:id="@+id/textViewOut"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPrevision" />

    <TextView
        android:id="@+id/textAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:text="@string/infoAdd"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOut" />

    <Button
        android:id="@+id/buttonBigFourCheeses"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="addBigFourCheeses"
        android:text="@string/BigFourCheeses"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAdd" />

    <Button
        android:id="@+id/buttonBigNeapolitan"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="addBigNeapolitan"
        android:text="@string/BigNeapolitan"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/buttonBigFourCheeses"
        app:layout_constraintTop_toBottomOf="@+id/buttonBigFourCheeses" />

    <Button
        android:id="@+id/buttonSmallSicilian"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="addSmallSicilian"
        android:text="@string/SmallSicilian"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/buttonBigNeapolitan"
        app:layout_constraintTop_toBottomOf="@+id/buttonBigNeapolitan" />

    <Button
        android:id="@+id/buttonSmallMargarita"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="addSmallMargarita"
        android:text="@string/SmallMargarita"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/buttonSmallSicilian"
        app:layout_constraintTop_toBottomOf="@+id/buttonSmallSicilian" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:onClick="delete"
        android:text="@string/delete"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/buttonNext"
        app:layout_constraintTop_toBottomOf="@+id/buttonNext" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Каталог"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:text="Singleton"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewCatalog0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textViewCatalog1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewCatalog0"
        app:layout_constraintTop_toBottomOf="@+id/textViewCatalog0" />

    <TextView
        android:id="@+id/textViewCatalog2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewCatalog1"
        app:layout_constraintTop_toBottomOf="@+id/textViewCatalog1" />

    <TextView
        android:id="@+id/textViewSingelton0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textViewSingelton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewSingelton0"
        app:layout_constraintTop_toBottomOf="@+id/textViewSingelton0" />

    <TextView
        android:id="@+id/textViewSingelton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewSingelton1"
        app:layout_constraintTop_toBottomOf="@+id/textViewSingelton1" />

</androidx.constraintlayout.widget.ConstraintLayout>